[package]
name = "mus-fuse"
version = "0.6.0"
authors = ["AB <ultradesu@hexor.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = {version = "2.33", features = ["yaml"]}
serde_json = "1.0"
percent-encoding = "2.1.0"
fuse = "0.3.1"
time = "0.1.42"
libc = "0.2.69"
chrono = "0.4.11"
env_logger = "0.7.1"
log = { version = "^0.4.5", features = ["std"] }
size_format = "1.0.2"
base64 = "0.12.0"
ctrlc = "3.1.4"
